cmd/webserver/assets/sass/_tables.scss
div table.dataTable {
    border-collapse: separate !important;
}

// Pagination donate link
ul.pagination li.donate {
    padding: .5rem .75rem;
}

// TH padding
table.table.dataTable {
    th.sorting_desc_disabled, th.sorting_asc_disabled {
        padding-right: 35px;
    }
}

//
table.table:not(.table-no-border) {

    border: 1px solid rgba(0, 0, 0, .125); // Taken from cards
    border-radius: 5px;
    border-collapse: separate;
    border-spacing: 0;

    // Fix double borders
    tbody:first-child {
        tr:first-child {
            th, td {
                border-top: 0;
            }
        }
    }
}

.table-nonfluid {
    width: auto !important;
}

//
table.table {

    thead {
        th {
            color: $dark;
            white-space: nowrap;
            border: 0;

            a {
                color: $dark;
                text-decoration: underline;
            }
        }
    }

    th.thin {
        width: 1%;
    }

    td {
        box-sizing: content-box;

        img {
            max-width: 100%;
        }

        div.progress {
            height: 24px;
        }

        .icon-name { // Can be div or a
            display: table;
            color: #212529;

            > div.icon {
                display: table-cell;
                vertical-align: top;
                width: 1%;
            }

            > div.name {
                display: table-cell;
                vertical-align: middle;
                min-width: 150px;
                word-break: break-word;
                white-space: normal;
                line-height: 20px;

                small {
                    color: #768390;
                }
            }

            > div.name.min {
                min-width: auto;
            }

            > div.icon + div.name {
                @extend .pl-2;
            }
        }
    }

    td.img {
        @extend .pt-0;
        @extend .pb-0;

        //padding-left: 6px;

        img {
            @extend .rounded;
            margin-top: 6px;
            margin-bottom: 6px;
            height: 36px;
            width: 36px;
            max-width: none;
            vertical-align: middle;
        }

        div.avatar2 {
            margin-top: 8px;
            margin-bottom: 8px;
            height: 32px;
            width: 32px;
            max-width: none;
            vertical-align: middle;
        }

        img.wide {
            width: auto;
        }

        img.tall {
            width: 54px;
            height: 54px;
        }

        .icon-name { // Can be div or a
            > div.name {
                padding: .75rem 0;
            }
        }
    }

    td.platforms {
        font-size: 22px;
        line-height: 48px;
        padding: 0 .75rem 0 .75rem; // Remove top/bottom padding

        i, svg, a {
            @extend .mr-1;
        }

        i:last-of-type, svg:last-of-type {
            @extend .mr-0;
        }

        span.space {
            display: none;
        }
    }

    td.thin {
        width: 1%;
    }

    td.platforms.platforms-align span.space {
        display: inline-block;
        width: .875em;
    }

    // Trending charts
    td.chart {
        width: 210px;

        > div {
            height: 32px;
            margin: -4px;
            width: 210px;
        }
    }
}

// This is to override the external style sheet
table.dataTable {
    clear: both;
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    max-width: none !important;
    border-collapse: collapse !important;
    border-spacing: 0;
}

table.dataTable thead .sorting:before,
table.dataTable thead .sorting_asc:before,
table.dataTable thead .sorting_desc:before,
table.dataTable thead .sorting_asc_disabled:before,
table.dataTable thead .sorting_desc_disabled:before {
    right: 1.3em;
    content: "\2191";
}

table.dataTable thead .sorting:after,
table.dataTable thead .sorting_asc:after,
table.dataTable thead .sorting_desc:after,
table.dataTable thead .sorting_asc_disabled:after,
table.dataTable thead .sorting_desc_disabled:after {
    right: 0.5em;
    content: "\2193";
}

table.dataTable thead > tr > th.sorting_asc,
table.dataTable thead > tr > th.sorting_desc,
table.dataTable thead > tr > th.sorting,
table.dataTable thead > tr > td.sorting_asc,
table.dataTable thead > tr > td.sorting_desc,
table.dataTable thead > tr > td.sorting {
    padding-right: 40px;
}

.dt-pagination:not(:empty) {
    @extend .justify-content-center;
    @extend .text-center;

    > div {
        display: inline-block;
    }
}

.dt-header {

    @include clearfix();

    .dt-pagination:not(:empty) {
        @include media-breakpoint-up(md) {
            margin-bottom: 1rem !important; // Can't @extend inside @include
            float: left;
        }
    }

    .dt-info:not(:empty) {
        @include media-breakpoint-up(md) {
            margin-bottom: 1rem !important; // Can't @extend inside @include
            float: right;
        }
        line-height: 42px;

        div {
            @extend .pt-0;
        }
    }
}

.dt-footer {
    .dt-pagination:not(:empty) {
        @extend .mt-3;
    }
}

